--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reddit-minimal",
-  "homepage": "http://narayanan-srinivasan37.github.io/reddit-minimal",
+  "homepage": "http://narayanan-srinivasan37.github.io/reddit-minimal/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
