--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "hls.js": "^1.1.1",
+    "m3u8-parser": "^4.7.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hls-player": "^3.0.7",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
@@ -25,6 +28,7 @@
     "react-visibility-sensor": "^5.1.1",
     "react-waypoint": "^10.1.0",
     "reactjs-media": "^2.2.0",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -55,6 +59,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "video.js": "^7.17.0"
   }
 }
