--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hls.js": "^1.1.1",
     "m3u8-parser": "^4.7.0",
     "moment": "^2.29.1",
+    "plyr": "^3.6.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hls-player": "^3.0.7",
