--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dashjs": "^4.2.1",
     "hls.js": "^1.1.1",
     "m3u8-parser": "^4.7.0",
     "moment": "^2.29.1",
@@ -26,6 +27,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-select": "^3.2.0",
+    "react-video-js-player": "^1.1.1",
     "react-visibility-sensor": "^5.1.1",
     "react-waypoint": "^10.1.0",
     "reactjs-media": "^2.2.0",
